[tool.poetry]
name = "python-web-hw-02"
version = "0.1.0"
description = ""
authors = ["shulika-w"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
